@@ -172,6 +172,12 @@ describe PageObject::ElementLocators do
       element = watir_page_object.form_element(:id => 'blah')
       element.should be_instance_of PageObject::Elements::Form
     end
+
+    it "should find all forms" do
+      watir_browser.should_receive(:forms).with(:id => 'blah').and_return([watir_browser])
+      elements = watir_page_object.form_elements(:id => 'blah')
+      elements[0].should be_instance_of PageObject::Elements::Form
+    end
     
     it "should find a list item" do
       watir_browser.should_receive(:li).with(:id => 'blah').and_return(watir_browser)
@@ -407,6 +413,12 @@ describe PageObject::ElementLocators do
       element.should be_instance_of PageObject::Elements::Form
     end
     
+    it "should find all forms" do
+       selenium_browser.should_receive(:find_elements).with(:id, 'blah').and_return([selenium_browser])
+       elements = selenium_page_object.form_elements(:id => 'blah')
+       elements[0].should be_instance_of PageObject::Elements::Form
+    end
+
     it "should find a list item" do
       selenium_browser.should_receive(:find_element).with(:id, 'blah').and_return(selenium_browser)
       element = selenium_page_object.list_item_element(:id => 'blah')
